--- a/src/assets/scss/common/navbar.scss
+++ b/src/assets/scss/common/navbar.scss
@@ -1,47 +1,57 @@
+/** @format */
+@import '../utils/vars.scss';
+@import '../helpers/md-body.scss';
+
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 99;
-  padding: 20px 0;
-  background-color: $g-0;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 99;
+	padding: 0 0;
+	background-color: $g-0;
+	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+	//height: rem(100px);
 }
 
 .navbar-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	max-width: 300px;
+	max-height: 100px;
+	height: rem(60px);
 }
 
 .navbar-logo {
-  color: $g-999;
-  font-weight: 700;
+	color: $g-999;
+	font-weight: 700;
+	padding-right: 20px;
+	//font-size: rem(20px);
 }
 
 .navbar-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .navbar-item {
-  margin-right: 30px;
-  cursor: pointer;
-  &:last-child {
-    margin-right: 0;
-  }
+	margin-right: 30px;
+	cursor: pointer;
+	&:last-child {
+		margin-right: 0;
+	}
 }
 
 .navbar-link {
-  display: block;
-  transition: all 0.2s ease;
-  color: $purple-color-100;
-  // active link
-  &.isActive,
-  &.router-link-active,
-  &.router-link-exact-active {
-    text-decoration: underline;
-  }
+	display: block;
+	transition: all 0.2s ease;
+	color: $purple-color-100;
+	// active link
+	&.isActive,
+	&.router-link-active,
+	&.router-link-exact-active {
+		text-decoration: underline;
+	}
 }
