--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -35,3 +35,23 @@
 		width: 60% !important;
 	}
 }
+
+.login-wrapper {
+	display: flex;
+	justify-content: center;
+	font-size: rem($mainFontSize);
+	font-weight: 600;
+	position: fixed;
+	text-align: left;
+	top: calc((rem(60px) / 2) - (rem(49) / 2));
+	right: -30px;
+	height: rem(49);
+	margin: 0 auto;
+	z-index: 100;
+	width: rem(150) !important;
+	///transition: all 300ms ease-out;
+}
+
+.login {
+	width: 100%;
+}
